--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- <p>Adam Valencia</p> -->
         <ul>
           <li><a href="#about-me">About Me</a></li>
-          <li><a href="resources/assets/AdamValenciaResume.pdf" target="_blank">Resume</a></li>
+          <li><a href="https://drive.google.com/drive/folders/1R6oKrulGJmsPQ2xoNTLR0NqpH9gNW0li?usp=sharing">Awards</a></li>
           <li><a href="#blog">Blog</a></li>
         </ul>
       </nav>
@@ -43,13 +43,7 @@
             <!-- Change the <p> tag to your personal about me section. -->
             <h1>About Me</h1>
             <p>
-                I am a first-generation graduate from Hamilton College with a B.A.
-                in Computer Science and Mathematics and a minor in Education.
-                I have a strong interest in software development with a focus 
-                on equal access to technological education. My passion is to 
-                aid in making technology as accessible to the most marginalized
-                people in The United States through development, opportunity, and 
-                community involvement.
+            My name is Darius and I like coding.
             </p>
           </div>
         </div>
