--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- URL and Tab Information -->
     <link rel="icon" href="./resources/images/logo.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="./resources/images/logo.ico" type="image/x-icon">
-    <title>Adam Valencia</title>
+    <title>Darius Glenn</title>
 
   </head>
 
@@ -43,7 +43,7 @@
             <!-- Change the <p> tag to your personal about me section. -->
             <h1>About Me</h1>
             <p>
-            My name is Darius and I like coding.
+            My name is Darius Glenn I am a 16 year old upcoming jr class of 2024 and i love coding. I made this website to showcase my coding projects over the span of 2 months.
             </p>
           </div>
         </div>
@@ -52,46 +52,45 @@
       <!--Featured Teas-->
       <section id="projects">
         <h2>My Projects</h2>
-        <h4>A look at some of my college projects</h4>
         <div class="project-container">
           <figure class="item-border">
-            <a href="https://github.com/Advm/NamePronunciationProject">
+            <a href="https://github.com/AnAssembledNetwork/project-4-wordle-DariusG101">
                 <img
-                  src="resources/images/NPP-slide.png"
-                  alt="Name Pronunciation Project Slide"
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Wordle_196_example.svg/2560px-Wordle_196_example.svg.png"
+                  alt="Wordle"
                 >
                 <!-- <i class="fa fa-upload fa-4x"></i> -->
             </a>
-            <figcaption>Name Pronunciation Project</figcaption>
+            <figcaption>Wordle</figcaption>
           </figure>
           <figure class="item-border">
-            <a href="https://github.com/Advm/Genetic-Programming/tree/main/term-project-Advm-main">
+            <a href="https://github.com/AnAssembledNetwork/project-2-magic-8-ball-eli-s-shipping-DariusG101">
               <img
-                src="resources/images/sql-query-code.png"
-                alt="Name Pronunciation Project Slide"
+                src="https://live.staticflickr.com/8162/6997812688_a1ff4927b0_w.jpg"
+                alt="Magic 8 Ball"
               >
             </a>
-            <figcaption>Evolving SQL Queries</figcaption>
+            <figcaption>Magic 8 Ball</figcaption>
           </figure>
-          <figure class="item-border">
+<!--           <figure class="item-border">
             <a href="https://youtu.be/iNJjGfUZUgo">
               <img
                 src="resources/images/red-utd-page.png"
                 alt="Name Pronunciation Project Slide"
               >
-              <!-- <i class="fa fa-upload fa-4x"></i> -->
+              <i class="fa fa-upload fa-4x"></i>
             </a>
-            <figcaption>University of Texas at Dallas REU</figcaption>
-          </figure>
+            <figcaption>Number Guesser</figcaption>
+          </figure> -->
           <figure class="item-border">
-            <a href="https://www.middlebury.edu/office/projects-for-peace/reading-room/hamilton-highlights-grantee-adam-valencia-22">
+            <a href="https://github.com/AnAssembledNetwork/project1-marathon-runner-DariusG101">
               <img
-                src="resources/images/project-for-peace-article.png"
-                alt="Name Pronunciation Project Slide"
+                src="https://media.defense.gov/2014/Sep/20/2000939642/2000/2000/0/140920-F-QV785-004.JPG"
+                alt="Marathon Runner"
               >  
               <!-- <i class="fa fa-upload fa-4x"></i> -->
             </a>
-            <figcaption>An Assembled Network</figcaption>
+            <figcaption>Tokyo Marathon Runner</figcaption>
           </figure>
         </div>
       </section>
@@ -103,22 +102,10 @@
         <div class = "scroll-container">
           <div class="item-border">
             <p>
-                Today I introduced my website template to the An Assembled Network cohort. I can't wait to see
-                the website ideas that the students come up with and work on!
+              I started making my website today 
             </p>
             <p class-="blog-footer">
-                July 26, 2022
-            </p>
-          </div>
-          <div class="item-border">
-            <p>
-                I just finished the first version of my personal website! Although
-                it has a long way to go, I am proud of the first edition. I am looking forward
-                to updating, improving, and hopefully learning new skills that make the website more 
-                functional!
-            </p>
-            <p class-="blog-footer">
-                July 25, 2022
+                July 27, 2022
             </p>
           </div>
           <div class="item-border">
@@ -135,9 +122,8 @@
 
     <!--Footer-->
     <footer>
-      <h2>Adam Valencia</h2>
-      <h2>adamvalencia22@gmail.com</h2>
-      <h2>(929)-343-8424</h2>
+      <h2>Darius Glenn</h2>
+      <h2>gdarius542d@gmail.com</h2>
     </footer>
   </body>
 </html>
